--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /CRUD_Participantes/nbproject/private/
 /CRUD_Participantes/build/
+/CRUD_Participantes_Jorge/nbproject/private/
+/CRUD_Participantes_Jorge/build/
+/CRUD_Participantes_Jorge/dist/
